salesforce/objects/ActionEnablementSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Action Enablement Setting</label>
    
    <!-- ActionName__c - Text 80 -->
    <fields>
        <fullName>ActionName__c</fullName>
        <label>Action Name</label>
        <type>Text</type>
        <length>80</length>
        <required>true</required>
    </fields>
    
    <!-- Enabled__c - Checkbox -->
    <fields>
        <fullName>Enabled__c</fullName>
        <label>Enabled</label>
        <type>Checkbox</type>
        <defaultValue>true</defaultValue>
    </fields>
    
    <!-- MaxPerUserPerDay__c - Number -->
    <fields>
        <fullName>MaxPerUserPerDay__c</fullName>
        <label>Max Per User Per Day</label>
        <type>Number</type>
        <precision>4</precision>
        <scale>0</scale>
    </fields>
    
    <!-- LastModifiedByAdmin__c - Text 80 -->
    <fields>
        <fullName>LastModifiedByAdmin__c</fullName>
        <label>Last Modified By Admin</label>
        <type>Text</type>
        <length>80</length>
    </fields>
</CustomObject>